# algebra

./: README.md  algebra.cabal
src/Algebra/: Solver.hs
tests/: Test.hs
