name:                algebra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/algebra#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  exposed-modules:     Algebra.Solver
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       numeric-prelude >= 0.4.3.3

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests
  main-is:          Test.hs
  build-depends:    base >= 4.7 && < 5,
                    numeric-prelude >= 0.4.3.3,
                    tasty,
                    tasty-hunit,
                    algebra

